<?xml version="1.0"?>
<package format="2">
  <name>ballbalancer_msgs</name>
  <version>0.0.0</version>
  <description>The ballbalancer_msgs package</description>
  <maintainer email="daniel.trnka@gmail.com">Daniel Trnka</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
